objects/Set_of_Books__c.object
<CustomObject>
    <fields>
        <fullName>Active_User__c</fullName>
        <description>Checks if active user is the bookkeeper for the set of books.</description>
        <formula>OR(
$User.Id = OwnerId,
$User.FirstName + &quot; &quot; + $User.LastName = TEXT(Bookkeeper__c),

If( CONTAINS( Owner:User.Email, &quot;+lex@andersonadvisors.com&quot;),

If((Owner:User.FirstName + SUBSTITUTE( Owner:User.LastName , &quot; (LEX)&quot;, &quot;&quot;))= ($User.FirstName +  $User.LastName ),True,False),
If((Owner:User.FirstName+ Owner:User.LastName)=($User.FirstName +  SUBSTITUTE( $User.LastName, &quot; (LEX)&quot;, &quot;&quot;) ),True,false)))</formula>
        <label>Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Am_I_Reviewer__c</fullName>
        <formula>$User.FirstName + &quot; &quot; + $User.LastName = TEXT(Bookkeeping_Reviewer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am I Reviewer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apr_Bookkeeping_Comments__c</fullName>
        <label>Apr Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apr_Bookkeeping_Stages__c</fullName>
        <label>Apr Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apr_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Apr Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>April_Bookkeeping_Status__c</fullName>
        <label>April Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aug_Bookkeeping_Comments__c</fullName>
        <label>Aug Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aug_Bookkeeping_Stages__c</fullName>
        <label>Aug Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aug_Bookkeeping_Status__c</fullName>
        <label>Aug Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aug_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Aug Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Email__c</fullName>
        <label>Bookkeeper Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bookkeeper__c</fullName>
        <label>Bookkeeper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Admin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_Comments__c</fullName>
        <label>Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bookkeeping_Reviewer_Email__c</fullName>
        <label>Bookkeeping Reviewer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bookkeeping_Reviewer__c</fullName>
        <label>Bookkeeping Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Reviewer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeping_Status__c</fullName>
        <label>Jan Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Both_Names__c</fullName>
        <label>Both Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Viewable_Folder__c</fullName>
        <label>Box Viewable Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Set of Books</relationshipLabel>
        <relationshipName>Set_of_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Wide_Comments__c</fullName>
        <label>Client Wide Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Set of Books</relationshipLabel>
        <relationshipName>Set_of_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completing_Books_for_Tax_Year__c</fullName>
        <label>Completing Books for Tax Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countdown_until_Completion__c</fullName>
        <formula>if( ISPICKVAL(Bookkeeping_Status__c , &apos;Completed - Sent to Tax&apos;) || ISPICKVAL(Bookkeeping_Status__c , &apos;Completed - Moved to Ongoing&apos;),0,(Date_all_docs_received__c  + 30 ) - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Countdown until Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_by_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataload_Check_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User to trigger an update for a dataload.</description>
        <label>Dataload - Check Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Agreement_Fulfilled__c</fullName>
        <label>Date Agreement Fulfilled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_all_docs_received__c</fullName>
        <label>Date all docs received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Clean_up_Catch_up_start__c</fullName>
        <label>Date of Clean-up/Catch-up start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Missing_Info_sent__c</fullName>
        <label>Date of Missing Info sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_work_began__c</fullName>
        <label>Date work began</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Bookkeeping_Comments__c</fullName>
        <label>Dec Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dec_Bookkeeping_Stages__c</fullName>
        <label>Dec Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dec_Bookkeeping_Status__c</fullName>
        <label>Dec Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dec_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Dec Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doc_Reviewed_By__c</fullName>
        <label>Doc Reviewed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ashley Cloutier</fullName>
                </value>
                <value>
                    <fullName>Blanca Lemus</fullName>
                </value>
                <value>
                    <fullName>Christina Chavez</fullName>
                </value>
                <value>
                    <fullName>Jasmine Licitra</fullName>
                </value>
                <value>
                    <fullName>Kiera Dunphy</fullName>
                </value>
                <value>
                    <fullName>Lanzi Reel</fullName>
                </value>
                <value>
                    <fullName>Ryan On</fullName>
                </value>
                <value>
                    <fullName>Trisha Cullinane</fullName>
                </value>
                <value>
                    <fullName>Troy Butler</fullName>
                </value>
                <value>
                    <fullName>Crystal Moyer</fullName>
                </value>
                <value>
                    <fullName>Bethany Castleberry</fullName>
                </value>
                <value>
                    <fullName>Abraham Carrillo</fullName>
                </value>
                <value>
                    <fullName>Brina DeLeon (admin)</fullName>
                </value>
                <value>
                    <fullName>Bruce Williams</fullName>
                </value>
                <value>
                    <fullName>Carol Spagnoletta</fullName>
                </value>
                <value>
                    <fullName>Chrissy Kozlowski</fullName>
                </value>
                <value>
                    <fullName>Cindy Mejorado</fullName>
                </value>
                <value>
                    <fullName>Dawn Popa</fullName>
                </value>
                <value>
                    <fullName>Dawson Phipps</fullName>
                </value>
                <value>
                    <fullName>Jennifer Soikowski</fullName>
                </value>
                <value>
                    <fullName>Joel Evans</fullName>
                </value>
                <value>
                    <fullName>Jonna States</fullName>
                </value>
                <value>
                    <fullName>Kevin Dennis</fullName>
                </value>
                <value>
                    <fullName>Mandy Hahn</fullName>
                </value>
                <value>
                    <fullName>Michelle Fuller</fullName>
                </value>
                <value>
                    <fullName>Nancy Naraine</fullName>
                </value>
                <value>
                    <fullName>Nick Buffalow</fullName>
                </value>
                <value>
                    <fullName>Rene Riette</fullName>
                </value>
                <value>
                    <fullName>Ruby Del Prado</fullName>
                </value>
                <value>
                    <fullName>Sam Annoni (admin)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_Filed__c</fullName>
        <inlineHelpText>Enter the date the extension was filed!</inlineHelpText>
        <label>Extension Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Bookkeeping_Comments__c</fullName>
        <label>Feb Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feb_Bookkeeping_Stages__c</fullName>
        <label>Feb Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feb_Bookkeeping_Status__c</fullName>
        <label>Feb Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feb_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Feb Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fix_Set_of_Books__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fix Set of Books</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_my_record__c</fullName>
        <formula>OR(
$User.Id = OwnerId,
$User.FirstName + &quot; &quot; + $User.LastName = TEXT(Bookkeeper__c),
 $User.FirstName + &quot; &quot; + $User.LastName = TEXT(Bookkeeping_Reviewer__c),
If( CONTAINS(  Owner:User.Username , &quot;+lex@andersonadvisors.com&quot;),

If((Owner:User.FirstName + SUBSTITUTE( Owner:User.LastName , &quot; (LEX)&quot;, &quot;&quot;) )= ($User.FirstName +  $User.LastName)

,True,False),If((Owner:User.FirstName+ Owner:User.LastName )=($User.FirstName + SUBSTITUTE( $User.LastName , &quot; (LEX)&quot;, &quot;&quot;) ) ,True,false))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is my record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jan_Bookkeeping_Comments__c</fullName>
        <label>Jan Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jan_Bookkeeping_Stages__c</fullName>
        <label>Jan Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jan_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Jan Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_Bookkeeping_Comments__c</fullName>
        <label>Jul Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jul_Bookkeeping_Stages__c</fullName>
        <label>Jul Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jul_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Jul Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>July_Bookkeeping_Status__c</fullName>
        <label>July Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jun_Bookkeeping_Comments__c</fullName>
        <label>Jun Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jun_Bookkeeping_Stages__c</fullName>
        <label>Jun Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jun_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Jun Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>June_Bookkeeping_Status__c</fullName>
        <label>June Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://andersonadvisors.my.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_View_User__c</fullName>
        <formula>IF($User.FirstName + &quot; &quot; + $User.LastName =  Text(Bookkeeping_Reviewer__c) , &quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List View User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mar_Bookkeeping_Comments__c</fullName>
        <label>Mar Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mar_Bookkeeping_Stages__c</fullName>
        <label>Mar Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mar_Bookkeeping_Status__c</fullName>
        <label>Mar Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mar_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Mar Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>May_Bookkeeping_Comments__c</fullName>
        <label>May Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>May_Bookkeeping_Stages__c</fullName>
        <label>May Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>May_Bookkeeping_Status__c</fullName>
        <label>May Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>May_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>May Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_Sent_to_Tax_Number__c</fullName>
        <formula>IF(ISBLANK( Sent_To_Tax__c) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Sent to Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Bookkeeping_Comments__c</fullName>
        <label>Nov Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nov_Bookkeeping_Stages__c</fullName>
        <label>Nov Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nov_Bookkeeping_Status__c</fullName>
        <label>Nov Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nov_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Nov Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_BK_Records__c</fullName>
        <label>Number of BK Records</label>
        <summaryForeignKey>Bookkeeping__c.Set_of_Books__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Entities__c</fullName>
        <label>Number of Entities</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oct_Bookkeeping_Comments__c</fullName>
        <label>Oct Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Oct_Bookkeeping_Stages__c</fullName>
        <label>Oct Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oct_Bookkeeping_Status__c</fullName>
        <label>Oct Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oct_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Oct Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Entities__c</fullName>
        <label>Primary Entities</label>
        <summaryFilterItems>
            <field>Bookkeeping__c.Primary_Entity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bookkeeping__c.Set_of_Books__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Entity_Set_of_Books__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Set of Books</relationshipLabel>
        <relationshipName>Set_of_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quickbooks_Record_URL__c</fullName>
        <label>Quickbooks Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Report_User__c</fullName>
        <formula>IF(

$User.Id = Owner:User.Id ||
/* $User.FirstName+$User.LastName = Owner:User.FirstName+Owner:User.LastName || */
If( CONTAINS( Owner:User.Username , &quot;+lex@andersonadvisors.com&quot;),
If((Owner:User.FirstName + SUBSTITUTE( Owner:User.LastName , &quot; (LEX)&quot;, &quot;&quot;) )= ($User.FirstName + $User.LastName ),True,False),If((Owner:User.FirstName+ Owner:User.LastName)=($User.FirstName + SUBSTITUTE( $User.LastName , &quot; (LEX)&quot;, &quot;&quot;) ),True,false)) ,

1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Filed__c</fullName>
        <inlineHelpText>Enter the date the return was filed!</inlineHelpText>
        <label>Return Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rollover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rollover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Email__c</fullName>
        <label>Second Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Second_Name__c</fullName>
        <label>Second Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_To_Tax__c</fullName>
        <inlineHelpText>Enter the date this record was sent to the tax team!</inlineHelpText>
        <label>Sent To Tax</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sep_Bookkeeping_Comments__c</fullName>
        <label>Sep Bookkeeping Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sep_Bookkeeping_Stages__c</fullName>
        <label>Sep Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sep_Bookkeeping_Status__c</fullName>
        <label>Sep Bookkeeping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sep_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Sep Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Return_Type__c</fullName>
        <label>Tax Return Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1120</fullName>
                </value>
                <value>
                    <fullName>1120S</fullName>
                </value>
                <value>
                    <fullName>1065</fullName>
                </value>
                <value>
                    <fullName>1040</fullName>
                </value>
                <value>
                    <fullName>990</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Year_End__c</fullName>
        <description>Sortable field for &quot;Completing Books for Tax Year&quot;</description>
        <label>Tax Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Bkg_Record__c</fullName>
        <description>Used for a data load to make the Set of Books a Master Detail to the bookkeeping object.</description>
        <label>Temp Bkg Record</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transitioning_to_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transitioning to Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_April__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for April</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_August__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for August</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_December__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for December</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_February__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for February</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_January__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for January</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_July__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for July</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_June__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verification for July</description>
        <label>Verification for June</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_March__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for March</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_May__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for May</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_November__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for November</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_October__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for October</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_for_September__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification for September</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1099_Info__c</fullName>
        <inlineHelpText>Use this field to document if the client requested our 1099 services, comments about the status, and/or record the completion date.</inlineHelpText>
        <label>1099 Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>